<resources>
    <string name="app_name">My Day</string>
    <string name="calendar">Calendar</string>
    <string name="tabs">Tabs</string>
    <string name="search">Search</string>
    <string name="nameHint">Name of Task</string>
    <string name="descriptionHeading">Description</string>
    <string name="description">Details here…</string>
    <string name="timeHeading">Time to complete by</string>
    <string name="priorityHeading">Priority</string>
    <string name="priority">Choose priority</string>
    <string name="timeText">Time: </string>
    <string name="priorityText">Priority: </string>
    <string name="taskButton">Add task</string>
    <string name="addButton">Add task</string>
    <string name="editButton">Edit Task</string>
    <string name="snackbarDeleteAction">Do you want to delete the task?</string>
    <string name="snackbarDeleteMessage">Delete</string>
    <string name="snackbarDeleteDone">Task deleted</string>
    <string name="purpleTheme">Purple Theme</string>
    <string name="blueTheme">Blue Theme</string>
    <string name="yellowTheme">Yellow Theme</string>
    <string name="delete_icon">delete Icon</string>

    <string-array name="priorityArray">
        <item>Critical</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="priorityChip">Priority</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo_image">Logo Image</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="please_input_the_verification_code_we_sent_to_your_email">Please input the verification code we sent to your email</string>
    <string name="please_input_the_code_sent_to_your_email">Please input the code sent to your email</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="please_enter_your_email_address_to_request_a_password_reset">Please enter your email address to request a password reset</string>
    <string name="send_code">Send Code</string>
    <string name="a_password_reset_code_was_sent_to_your_email_address">A password reset code was sent to your email address</string>
    <string name="reset_code">Reset Code</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_task">Edit Task</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="shared_tasks">Shared Tasks</string>
    <string name="collaborators">Collaborators</string>
    <string name="choose_collaborators">Choose Collaborators</string>

</resources>